Migrate aml_check table to personal codes instead of user ids. unfortunately, had to change a historical migration due to postgres and h2 differences.